增加移动端控制

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>TodoList</title>
+  <meta name="viewport" content="width=device-width,maximum-scale=1,minimum-scale=1,user-scalable=no">
   <script src="./assets/js/vue.js"></script>
   <style>
   	.todo-done{
