--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     }
     #todolistBox{
         overflow-x: hidden;
-        overflow-y: auto;
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
     }
     .li-moveout{
         -webkit-animation: liMoveOut 0.6s ease-in-out 0.1s both;
